# QTrack

./: .gitignore  README.md  calculate_MOT_metrics.py  common_evaluation_kimi.py  common_evaluation_kimi_2506.py  common_evaluation_llama-instruct.py  common_evaluation_llama.py  common_evaluation_mistral.py  common_evaluation_qwen_2.py  compute_all_metrics.py  divide_dataset.py  functions.py  index.html  json_to_jsonl.py  package.json  prepare_dataset_for_visionreasoner.py  prepare_mcp_dataset.py  process_objects.py  read_arrow_file.py  rmot_training.sh  setup.txt  tapo_training.sh  track.sh  vite.config.js
Evaluate_all_json_files/: evaluate.py
Model_Evaluation_Scripts/: common_evaluation_deepseek.py  common_evaluation_gemma3_12B.py  common_evaluation_gemma3_27B.py  common_evaluation_pixtral.py  common_evaluation_qwen_2.5.py
PAPO/: .gitignore  .gitmodules  README.md  environment.yaml  index.html  pyproject.toml  requirements.txt  setup.py
PAPO/data/: DATA.md
PAPO/examples/: config.yaml
PAPO/examples/configs/: config_dapo.yaml  config_grpo.yaml  config_grpo_papo.yaml
PAPO/verl/trainer/: config.py  main.py  ray_trainer.py
PAPO/verl/workers/actor/: config.py
PAPO/verl/workers/reward/: config.py
Plots/: temporal_association_graph.py
RMOT/: .gitignore  changes.md  inference.sh
RMOT/custom_eval_results/: detailed_evaluation_results_tta.json
RMOT/evaluation_scripts/: calculate_iou.py  curriculum_selector.py  evaluation_visionreasoner.py  evaluation_visionreasoner2.py  evaluation_visionreasoner3.py  generate_exp4_analysis.py  reward_and_eval.py
RMOT/prepare_dataset/: refer_seg_dataset.py  training_data_prepare_toturial.ipynb
RMOT/training_scripts/: download_dataset.py  model_merger.py  pretrain_bbox_supervise.py  pretrain_exp4_augment.py  pretrain_exp5_alignment.py  sft.py
Seg-Zero/: eval_my_model_trained_9370.sh  inspect_arrow.py
Seg-Zero/evaluation_scripts/: analyze.py
Seg-Zero/prepare_dataset/: gen_training_dataset.py
Seg-Zero/training_scripts/: run_visionreasoner_7b_4x80G.sh  visionreasoner_7b.yaml
Seg-Zero_with_TAPO/: tapo_training.sh
Seg-Zero_with_TAPO/evaluation_scripts/: eval_on_custom_data.sh  micro_eval.py  parser_unit_test_report.json  sam3_image_predictor.py
Seg-Zero_with_TAPO/prepare_dataset/: training_data_prepare_toturial.py
Seg-Zero_with_TAPO/training_scripts/: model_merger_final.py  pretrain_curriculum.py  pretrain_exp3_crossattn.py  run_visionreasoner_7b_4x80G.sh  run_visionreasoner_7b_8x46G.sh  visionreasoner_7b.yaml
Seg-Zero_with_TAPO/verl/: protocol.py
Seg-Zero_with_TAPO_prev/: eval_my_model.sh
Seg-Zero_with_TAPO_prev/evaluation_scripts/: corr.py  eval.py  eval_reasonseg_visionreasoner.sh  generate_exp3_analysis.py
Seg-Zero_with_TAPO_prev/training_scripts/: run_visionreasoner_7b_4x80G.sh  visionreasoner_7b.yaml
Seg-Zero_with_TAPO_prev/verl/: __init__.py  protocol.py
assets/: index-9ZwZ5Q1y.js  index-BZFNNCJM.js  index-C8R7V_aM.js  index-CddjFcSh.css  index-CiMr7-1k.css  index-D2lCrAlF.js  index-JBSJCEuj.css  index-WuUDO4_V.js
evaluation_scripts/: common_evaluation_visionreasoner_prev.py  evaluate_QTrack.py
metrics/: dre.py  iou.py  mcp.py  mota.py  motion.py  nde.py  rob.py
prepare_dataset/: build_for_splitted_queries.py  build_qtrack_dataset.py  build_qtrack_dataset_v2.py  split_queries.py
src/: App.jsx
src/components/: Abstract.jsx  Algorithm.jsx  AuthorsCitation.jsx  ChartsSection.jsx  Footer.jsx  Header.jsx  Hero.jsx  Results.jsx
training_scripts/: qtrack.yaml  run_visionreasoner_7b_4x80G.sh  train_qtrack.sh  visionreasoner_7b.yaml
(+41 files in other folders)
